# QRKit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  user.cmake.in
Eigen/src/SparseCore/: SparseUtil.h
bench/: bench_sparse_qr_extra.cpp
examples/: ellipse_fitting.cpp
imgs/: optim_conv.m4v
src/QRKit/: BandedBlockedSparseQR.h  BlockAngularSparseQR.h  BlockDiagonalSparseQR.h  BlockMatrix1x2.h  BlockYTY.h  BlockedThinDenseQR.h  BlockedThinQRBase.h  BlockedThinSparseQR.h  ColPivHouseholderQR.h  QRKit  SparseBlockCOO.h  SparseBlockDiagonal.h  SparseBlockYTY.h  SparseQROrdering.h  SparseQRUtils.h  SparseUtil.h
src/unsupported/Eigen/: SparseQRExtra
src/unsupported/Eigen/src/SparseQRExtra/: BandedBlockedSparseQR.h  BlockAngularSparseQR.h  BlockYTY.h  BlockedThinDenseQR.h  BlockedThinSparseQR.h  SparseBlockCOO.h  SparseBlockDiagonal.h
src/unsupported/bench/: bench_sparse_qr_extra.cpp
src/unsupported/tests/: CMakeLists.txt  sparse_qr_extra_utils.cpp
test/: CMakeLists.txt  test-qrkit.cpp  test-utils.cpp  test.h  test_qrkit.cpp  test_utils.cpp
unsupported/Eigen/: CMakeLists.txt
unsupported/Eigen/src/SparseQRExtra/: BlockDiagonalSparseQR.h  BlockMatrix1x2.h  BlockedThinQRBase.h  SparseQROrdering.h
